--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "postcss": "^8.4.13",
     "rxjs": "~7.5.0",
+    "tailwindcss": "^3.0.24",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
