--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@ngxs/devtools-plugin": "^3.7.3",
+    "@ngxs/logger-plugin": "^3.7.3",
+    "@ngxs/store": "^3.7.3",
     "postcss": "^8.4.13",
     "rxjs": "~7.5.0",
     "tailwindcss": "^3.0.24",
